tests/ui/discord-frontend/entity_macro/expected_extra.stderr
error: expected `extra`
  --> tests/ui/discord-frontend/entity_macro/expected_extra.rs:37:5
   |
LL |     expected_extra = [],
   |     ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

